--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "root/migrants",
+    "name": "numerogeek/ultimate-symfony2-boilerplate",
     "license": "proprietary",
     "type": "project",
     "autoload": {
