--- a/composer.json
+++ b/composer.json
@@ -4,60 +4,63 @@
     "type": "project",
     "authors": [
         {
-        "name": "Geoffrey MONTÉ"
+            "name": "Geoffrey MONTÉ"
         }
     ],
     "autoload": {
         "psr-4": {
-            "": "src/",
-            "SymfonyStandard\\": "app/SymfonyStandard/"
-        }
+            "": "src/"
+        },
+        "classmap": [
+            "app/AppKernel.php",
+            "app/AppCache.php"
+        ]
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "2.7.*",
-        "doctrine/orm": "~2.2,>=2.2.3,<2.5",
-        "doctrine/dbal": "<2.5",
+        "symfony/symfony": "2.8.*",
+        "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
-        "symfony/assetic-bundle": "~2.3",
+        "symfony/assetic-bundle": "^2.7",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~4.0",
-        "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
+        "sensio/distribution-bundle": "~5.0",
+        "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~1.3",
-        "egeloen/ckeditor-bundle": "~2.0",
-        "stof/doctrine-extensions-bundle": "^1.1",
+        "egeloen/ckeditor-bundle": "^4.0",
+        "stof/doctrine-extensions-bundle": "^1.2",
         "vich/uploader-bundle": "^0.14.0",
-        "liip/imagine-bundle": "^1.3",
-        "behat/symfony2-extension": "^2.0",
-        "knplabs/knp-paginator-bundle": "^2.4",
-        "helios-ag/fm-elfinder-bundle": "~5.0",
-        "behat/mink-goutte-driver": "^1.1",
-        "behat/mink-selenium2-driver": "^1.2",
+        "liip/imagine-bundle": "^1.5",
+        "behat/symfony2-extension": "^2.1",
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "helios-ag/fm-elfinder-bundle": "~6",
+        "behat/mink-goutte-driver": "^1.2",
+        "behat/mink-selenium2-driver": "^1.3",
         "behat/behat": "^3.0",
-        "behat/mink-extension": "^2.0",
-        "mremi/contact-bundle": "dev-master",
-        "doctrine/doctrine-migrations-bundle": "^1.0",
-        "avanzu/admin-theme-bundle": "dev-master",
-        "smart-core/accelerator-cache-bundle": "^1.0@dev"
+        "behat/mink-extension": "^2.2",
+        "mremi/contact-bundle": "^1.3",
+        "doctrine/doctrine-migrations-bundle": "^1.1",
+        "avanzu/admin-theme-bundle": "~1.3",
+        "smart-core/accelerator-cache-bundle": "^1.1"
+
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3",
-        "hautelook/alice-bundle": "^0.2.0"
+        "sensio/generator-bundle": "~3.0",
+        "symfony/phpunit-bridge": "~2.7",
+        "hautelook/alice-bundle": "^0.2.0",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
+
     },
     "scripts": {
-        "post-root-package-install": [
-            "SymfonyStandard\\Composer::hookRootPackageInstall"
-        ],
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
+            "php app/console avanzu:admin:fetch-vendor"
         ],
         "post-update-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
@@ -65,12 +68,12 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ]
     },
     "config": {
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "component-dir": "web/assets"
     },
     "extra": {
         "symfony-app-dir": "app",
